mejora del footer: se agrega contenido adicional y estilo para mayor claridad y diseño

--- a/index.html
+++ b/index.html
@@ -544,9 +544,18 @@
         </div>
     </section>
 
-    <!-- FOOTER simple -->
-    <footer class="bg-primary py-8 text-center text-slate-500 text-sm">
-        <p>&copy; 2026 OPOR. Todos los derechos reservados.</p>
+    <!-- FOOTER -->
+    <footer class="bg-primary py-12 text-center text-slate-400 text-sm border-t border-slate-700/30">
+        <div class="max-w-6xl mx-auto px-4">
+            <p class="mb-4 text-slate-500 font-medium">&copy; 2026 OPOR. Todos los derechos reservados.</p>
+            <div class="flex items-center justify-center gap-1.5 text-xs uppercase tracking-widest opacity-80">
+                <span>Desarrollado y hecho con</span>
+                <svg class="w-3.5 h-3.5 text-rose-500 animate-pulse" fill="currentColor" viewBox="0 0 20 20">
+                    <path fill-rule="evenodd" d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z" clip-rule="evenodd"></path>
+                </svg>
+                <span>por <span class="text-secondary font-bold">Sattlink</span></span>
+            </div>
+        </div>
     </footer>
 
     <!-- ========================================= -->
