mejora de animaciones: se implementa un sistema de animaciones suaves al hacer scroll y se ajustan estilos para un revelado más fluido

--- a/index.html
+++ b/index.html
@@ -75,11 +75,19 @@
         /* Ajustes menores si es necesario */
         body { font-family: system-ui, -apple-system, sans-serif; }
         
-        /* Estilos base para elementos animables */
+        /* Estilos base para elementos animables (Revelado suave) */
         .animate-on-scroll {
-            opacity: 1;
+            opacity: 0;
+            transform: translateY(20px);
+            transition: all 0.8s cubic-bezier(0.22, 1, 0.36, 1);
+            will-change: transform, opacity;
         }
         
+        .animate-on-scroll.active {
+            opacity: 1;
+            transform: translateY(0);
+        }
+
         /* Transiciones suaves globales */
         * {
             transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -204,17 +212,17 @@
     <!-- ANIMACIÓN: Hero con entrada escalonada de elementos -->
     <section class="pt-32 pb-16 lg:pt-40 lg:pb-24 bg-gradient-to-b from-slate-50 to-white">
         <div class="max-w-4xl mx-auto px-4 sm:px-6 text-center">
-            <span class="text-secondary font-semibold uppercase tracking-wider text-sm mb-4 block">A tus órdenes</span>
-            <h1 class="text-4xl sm:text-5xl lg:text-6xl font-bold tracking-tight text-primary mb-6">
+            <span class="text-secondary font-semibold uppercase tracking-wider text-sm mb-4 block animate-on-scroll">A tus órdenes</span>
+            <h1 class="text-4xl sm:text-5xl lg:text-6xl font-bold tracking-tight text-primary mb-6 animate-on-scroll" style="transition-delay: 150ms;">
                 <!-- TEXTO EDITABLE: Título Principal -->
                 OPOR Veracruz
             </h1>
-            <p class="text-xl text-slate-500 mb-10 max-w-2xl mx-auto">
+            <p class="text-xl text-slate-500 mb-10 max-w-2xl mx-auto animate-on-scroll" style="transition-delay: 300ms;">
                 <!-- TEXTO EDITABLE: Subtítulo Explicativo -->
                 Te ofrecemos servicios integrales a tu medida, tiempos y presupuestos con base en planeación y profesionalismo sin igual.
             </p>
             <!-- ANIMACIÓN: Botones -->
-            <div class="flex flex-col sm:flex-row justify-center gap-4">
+            <div class="flex flex-col sm:flex-row justify-center gap-4 animate-on-scroll" style="transition-delay: 450ms;">
                 <a href="#contacto" class="inline-flex justify-center items-center px-8 py-3 bg-primary text-secondary font-semibold rounded-lg hover:bg-slate-700 hover:scale-105 hover:shadow-2xl transition-all duration-300 shadow-lg shadow-primary/30 group">
                     Solicitar Información
                     <svg class="w-5 h-5 ml-2 group-hover:translate-x-1 transition-transform duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg>
@@ -562,8 +570,27 @@
     <!-- JAVASCRIPT: Intersection Observer para animaciones al scroll -->
     <!-- ========================================= -->
     <script>
-        // Sistema de animaciones al hacer scroll desactivado
+        // Sistema de animaciones suave al hacer scroll
         document.addEventListener('DOMContentLoaded', function() {
+            const observerOptions = {
+                threshold: 0.15,
+                rootMargin: '0px 0px -50px 0px'
+            };
+
+            const observer = new IntersectionObserver((entries) => {
+                entries.forEach(entry => {
+                    if (entry.isIntersecting) {
+                        entry.target.classList.add('active');
+                        // No dejamos de observar si queremos que se repita (opcional), 
+                        // pero para UX es mejor que se quede fijo una vez aparece.
+                        observer.unobserve(entry.target);
+                    }
+                });
+            }, observerOptions);
+
+            // Observar todos los elementos con clase 'animate-on-scroll'
+            document.querySelectorAll('.animate-on-scroll').forEach(el => observer.observe(el));
+
             // Smooth scroll para los enlaces del menú
             document.querySelectorAll('a[href^="#"]').forEach(anchor => {
                 anchor.addEventListener('click', function (e) {
@@ -577,8 +604,6 @@
                     }
                 });
             });
-
-            // Parallax sutil en el hero desactivado para evitar efectos de desvanecimiento
         });
     </script>
 
