--- a/vcard/vianney.html
+++ b/vcard/vianney.html
@@ -9,15 +9,22 @@
         .vcard-gradient { background: linear-gradient(135deg, #3d4655 0%, #2a313c 100%); }
         .btn-action { transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1); }
         .btn-action:active { transform: scale(0.95); }
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(10px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+        .profile-anim { animation: fadeIn 0.8s ease-out forwards; }
+        .img-hover { transition: transform 0.5s ease; }
+        .img-hover:hover { transform: scale(1.05); }
     </style>
 </head>
 <body class="bg-slate-50 min-h-screen flex items-center justify-center p-4 antialiased">
     <div class="max-w-sm w-full bg-white rounded-[2.5rem] shadow-2xl shadow-slate-300/50 overflow-hidden border border-slate-100 relative">
         <div class="h-32 vcard-gradient relative">
             <div class="absolute -bottom-12 left-1/2 -translate-x-1/2">
-                <div class="w-24 h-24 bg-white rounded-3xl p-1 shadow-xl border border-slate-50">
-                    <div class="w-full h-full bg-slate-100 rounded-[1.2rem] flex items-center justify-center overflow-hidden">
-                        <img src="../img/logo.jpeg" alt="Vianney Zamora" class="w-full h-full object-cover">
+                <div class="w-24 h-24 bg-white rounded-xl p-1 shadow-xl border border-slate-50 profile-anim">
+                    <div class="w-full h-full bg-slate-100 rounded-lg flex items-center justify-center overflow-hidden">
+                        <img src="../img/vianney.jpeg" alt="Vianney Zamora" class="w-full h-full object-cover img-hover">
                     </div>
                 </div>
             </div>
